Fixed wrong spacing

--- a/website/src/less/main.less
+++ b/website/src/less/main.less
@@ -112,7 +112,6 @@
 
 .footer {
     position: relative;
-    top: -8px;
 
     .copyright {
         padding-top: 25px;
